--- a/predictive_maint/task_cards/templates/create_task_card.html
+++ b/predictive_maint/task_cards/templates/create_task_card.html
@@ -1,13 +1,66 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<form method="post">
-
-    {{ form }}
-
-    {% for formset in inlines %}
-      {{ formset }}
-    {% endfor %}
-    <input type="submit" value="Submit" />
-</form>
+    <h4 align="center">Task card creation</h4>
+    <form action="" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {% include 'partials/task_card_form.html' %}
+        <hr class="mt-3">
+        <h4 align="center" class="mt-3">TBS Steps</h4>
+        <div id="steps_formset">
+            {{ steps_formset.management_form }}
+            {% for form in steps_formset  %}
+                
+                {% include 'partials/step_form.html' %}
+            {% endfor %}
+            <div id="steps_formset_empty_form" style="display:none" class="mt-3">
+                {% with steps_formset.empty_form as form %}
+                    {% include 'partials/step_form.html' %}
+                {% endwith %}
+            </div>
+        </div>
+        <input type="button" value="Add STEP" id="add_step" class btn btn-info mt-3>
+        <hr class="mt-3">
+        <h4 align="center" class="mt-3">Materials</h4>
+        <div id="materials_formset">
+            {{ materials_formset.management_form }}
+            {% for form in materials_formset  %}
+                
+                {% include 'partials/material_form.html' %}
+            {% endfor %}
+            <div id="materials_formset_empty_form" style="display:none" class="mt-3">
+                {% with materials_formset.empty_form as form %}
+                    {% include 'partials/material_form.html' %}
+                {% endwith %}
+            </div>
+        </div>
+        <input type="button"
+               value="Add Material"
+               id="add_material"
+               class
+               btn
+               btn-info
+               mt-3>
+        <div class="row">
+            <div class="col-12">
+                <input type="submit"
+                       class="btn btn-primary mt-3"
+                       value="Submit"
+                       style="float: right;"/>
+            </div>
+        </div>
+    </form>
 {% endblock content %}
+{% block scripts %}
+    <script>
+    $('#add_step').click(function() {
+        var form_idx = $('#id_steps-TOTAL_FORMS').val();
+        $('#steps_formset').append($('#steps_formset_empty_form').html().replace(/__prefix__/g, form_idx));
+        $('#id_steps-TOTAL_FORMS').val(parseInt(form_idx) + 1);
+    });
+    $('#add_material').click(function() {
+        var form_idx = $('#id_materials-TOTAL_FORMS').val();
+        $('#materials_formset').append($('#materials_formset_empty_form').html().replace(/__prefix__/g, form_idx));
+        $('#id_materials-TOTAL_FORMS').val(parseInt(form_idx) + 1);
+    });
+    </script>
+{% endblock scripts %}
