--- a/predictive_maint/templates/base.html
+++ b/predictive_maint/templates/base.html
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'defect_list' %}">Defects</a>  
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'task_card_list' %}">Task Cards</a>  
+                        </li>
                     </ul>
                 </div>
                 <div class="mx-auto order-0">
