--- a/predictive_maint/task_cards/templates/task_card_detail.html
+++ b/predictive_maint/task_cards/templates/task_card_detail.html
@@ -3,14 +3,17 @@
     {% load static %}
     <div class="row mt-3">
         <div class="col-8">
-
             <h3>Task card # {{ object.number }}</h3>
         </div>
         <div class="col-4">
             <a href="{% url 'task_card_update' object.id %}"
-                                   type="button"
-                                   class="btn btn-info"
-                                   align="right">Update Task card</a>
+               type="button"
+               class="btn btn-info"
+               align="right">Update Task card</a>
+            <a href="{% url 'task_card_print' object.id %}"
+               type="button"
+               class="btn btn-info"
+               align="right">Print</a>
         </div>
     </div>
     <div>
@@ -26,17 +29,18 @@
                 <div class="row">
                     <div class="col-8">
                         <code>{{ forloop.counter }}. {{ step.text }}</code>
-                        
                     </div>
                     <div class="col-4">
-                        {% if step.image %}                    
-                        <img src="{{ step.image.url }}" alt="Can't load image file" style="max-height:250px" class="mt-3 mb-3">
+                        {% if step.image %}
+                            <img src="{{ step.image.url }}"
+                                 alt="Can't load image file"
+                                 style="max-height:250px"
+                                 class="mt-3 mb-3">
                         {% endif %}
                     </div>
                     <hr>
                 </div>
             </div>
-            
         {% empty %}
             No tbs steps
         {% endfor %}
