--- a/predictive_maint/task_cards/templates/partials/step_form.html
+++ b/predictive_maint/task_cards/templates/partials/step_form.html
@@ -1,10 +1,21 @@
 <div class="row mt-3 mb-3">
     {% for hidden in form.hidden_fields %}{{ hidden }}{% endfor %}
-    <div class="col-6">
+    <div class="col-5">
         {{ form.text.label_tag }}
         {{ form.text }}
     </div>
-    <div class="col-4">
+    <div class="col-3">
+        <div class="row">
+            {{ form.staff_cat.label_tag }}
+            {{ form.staff_cat }}
+        </div>
+        <div class="row">
+            {{ form.manhours.label_tag }}
+            {{ form.manhours }}
+        </div>
+    </div>
+
+    <div class="col-2">
         {{ form.image.label_tag }}
         {{ form.image }}
     </div>
@@ -13,4 +24,4 @@
         {{ form.DELETE }}
     </div>
 
-</div>  
+</div>
